fix overflow scrolling X issue

--- a/static/styles/custom.sass
+++ b/static/styles/custom.sass
@@ -72,6 +72,7 @@ p
       font-weight: bold
       margin-bottom: 15px
       padding: 0.75em 1.5em
+      width: 100%
 
     &_submit
       background-color: #d69a00
